--- a/CarrefourAndroidDeveloper/applications/2DoList/app/src/main/res/layout/activity_main.xml
+++ b/CarrefourAndroidDeveloper/applications/2DoList/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,8 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
+    <include android:id="@+id/include_empty" layout="@layout/empty_state"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tasks"
         android:layout_width="match_parent"
